<resources>
    <string name="APRIL">APRIL</string>
    <string name="AUGUST">AUGUST</string>
    <string name="Add_to_cart">Add to cart</string>
    <string name="Available_Days">Available Days</string>
    <string name="Available_tickets">Available tickets</string>
    <string name="Backup_Settings">Backup Settings</string>
    <string name="Billing_Addresses">Billing Addresses</string>
    <string name="Buy_on_x">Buy on %1$s</string>
    <string name="Cancelled">Cancelled</string>
    <string name="Cash">Cash</string>
    <string name="Check_In">Check In</string>
    <string name="Check_Out">Check Out</string>
    <string name="Choose_map">Choose map:</string>
    <string name="Collection">Collection</string>
    <string name="Color_mode">Color Mode</string>
    <string name="Continue_on_x">Continue on %1$s</string>
    <string name="Create_New">Create a New</string>
    <string name="Create_Product">Create product</string>
    <string name="Creating_product_message">Creating product...</string>
    <string name="DECEMBER">DECEMBER</string>
    <string name="Date">Date</string>
    <string name="Date_from">Date from</string>
    <string name="Description">Description</string>
    <string name="Donation_amount">Donation amount</string>
    <string name="Dropoff">Dropoff</string>
    <string name="Empty">Empty!</string>
    <string name="End_time">End time</string>
    <string name="Event_info">Event info</string>
    <string name="FEBRUARY">FEBRUARY</string>
    <string name="Failed_Delivery">Failed Delivery</string>
    <string name="Free">Free</string>
    <string name="Fri">Fri</string>
    <string name="Gap_Between_Time_Slots">Gap between time slots</string>
    <string name="Headset">Headset</string>
    <string name="Hybrid">Hybrid</string>
    <string name="JANUARY">JANUARY</string>
    <string name="JULY">JULY</string>
    <string name="JUNE">JUNE</string>
    <string name="Light">Light</string>
    <string name="Location_colon">Location:</string>
    <string name="MARCH">MARCH</string>
    <string name="MAY">MAY</string>
    <string name="Main_information">Main information</string>
    <string name="Max_images_message_per_product">The maximum number of images is %1$d</string>
    <string name="Mins">Mins</string>
    <string name="Mon">Mon</string>
    <string name="MyTrips">My Trips</string>
    <string name="My_Orders">My Orders</string>
    <string name="My_Profile">My Profile</string>
    <string name="NOVEMBER">NOVEMBER</string>
    <string name="No_Available_Trips">No Available Trips</string>
    <string name="No_Orders">No Orders</string>
    <string name="No_Record_Found">No Record Found</string>
    <string name="OCTOBER">OCTOBER</string>
    <string name="Order_placed">Order placed:</string>
    <string name="Pay_now">Pay now</string>
    <string name="Personal">Personal</string>
    <string name="Please_enter_bookings_per_timeslot">Please enter a valid number for bookings per time slot</string>
    <string name="Product_name">Product name</string>
    <string name="Quantity_colon">Quantity:</string>
    <string name="Required">Required</string>
    <string name="Restore">Restore</string>
    <string name="SEPTEMBER">SEPTEMBER</string>
    <string name="SIZE">SIZE</string>
    <string name="SMS">SMS</string>
    <string name="Sat">Sat</string>
    <string name="Send_this_location">Send this location</string>
    <string name="Send_your_current_location">Send your current location</string>
    <string name="Set_Time_Slot">Set Time Slot</string>
    <string name="Set_your_rate">Please set your rating</string>
    <string name="Shipping_Addresses">Shipping Addresses</string>
    <string name="Skip">Skip</string>
    <string name="Skip_restore">Skip Restore</string>
    <string name="Sold_out">Sold Out</string>
    <string name="Start_time">Start time</string>
    <string name="Sun">Sun</string>
    <string name="TO">TO</string>
    <string name="Theme_mode">Theme mode</string>
    <string name="Thu">Thu</string>
    <string name="Tickets_details">Tickets Details</string>
    <string name="Time_Slot_Duration">Time Slot Duration</string>
    <string name="Time_from">Time from</string>
    <string name="Time_slot">Time slot</string>
    <string name="Time_to">Time to</string>
    <string name="To">To</string>
    <string name="Today_x">Today %1$s</string>
    <string name="Trip_status_not_Started">The trip has not started yet</string>
    <string name="Trips">Trips</string>
    <string name="Tue">Tue</string>
    <string name="Unavailable">Unavailable!</string>
    <string name="UpcomingTrips">Upcoming Trips</string>
    <string name="Update_Booking">Update Booking</string>
    <string name="Update_Event">Update Event</string>
    <string name="Update_Product">Update product</string>
    <string name="Updating_order_message">Updating product...</string>
    <string name="Updating_product_message">Updating product...</string>
    <string name="app_id">com.perkusss.shhebet</string>
    <string name="auto_play_gif">Autoplay GIFs</string>
    <string name="backup">Backup</string>
    <string name="ban_from_group">Ban member</string>
    <string name="bot_manager">Bot Manager</string>
    <string name="calls">Calls</string>
    <string name="change_email">Change email</string>
    <string name="change_language">Change Language</string>
    <string name="change_number">Change Number</string>
    <string name="chat_history">Chat History</string>
    <string name="chat_settings">Chats</string>
    <string name="cons_account_language">en</string>
    <string name="cons_account_last_seen">true</string>
    <string name="cons_account_read_receipts">true</string>
    <string name="cons_braodcast_nearby_app_invitation_enabled">true</string>
    <string name="cons_braodcast_nearby_group_invitation_enabled">true</string>
    <string name="cons_broadcast_nearby_invitation_app_business">0</string>
    <string name="cons_broadcast_nearby_invitation_app_individual">0</string>
    <string name="cons_broadcast_nearby_invitation_group_business">0</string>
    <string name="cons_broadcast_nearby_invitation_group_individual">0</string>
    <string name="cons_chats_auto_play_gif">true</string>
    <string name="cons_chats_enter_is_send">false</string>
    <string name="cons_notification_channel_fav_incoming_alert">false</string>
    <string name="cons_notification_channel_fav_led">#FF00FF00</string>
    <string name="cons_notification_channel_fav_outgoing_alert">true</string>
    <string name="cons_notification_channel_fav_popup">true</string>
    <string name="cons_notification_channel_fav_ringtone">content://settings/system/notification_sound</string>
    <string name="cons_notification_channel_fav_vibrate_state">OFF</string>
    <string name="cons_notification_contact_fav_incoming_alert">true</string>
    <string name="cons_notification_contact_fav_led">#FF00FF00</string>
    <string name="cons_notification_contact_fav_outgoing_alert">true</string>
    <string name="cons_notification_contact_fav_popup">true</string>
    <string name="cons_notification_contact_fav_ringtone">content://settings/system/notification_sound</string>
    <string name="cons_notification_contact_fav_vibrate_state">OFF</string>
    <string name="cons_notification_contact_other_incoming_alert">false</string>
    <string name="cons_notification_contact_other_led">#FF00FF00</string>
    <string name="cons_notification_contact_other_outgoing_alert">true</string>
    <string name="cons_notification_contact_other_popup">true</string>
    <string name="cons_notification_contact_other_ringtone">content://settings/system/notification_sound</string>
    <string name="cons_notification_contact_other_vibrate_state">OFF</string>
    <string name="cons_notification_group_fav_incoming_alert">false</string>
    <string name="cons_notification_group_fav_led">#FF00FF00</string>
    <string name="cons_notification_group_fav_outgoing_alert">true</string>
    <string name="cons_notification_group_fav_popup">true</string>
    <string name="cons_notification_group_fav_ringtone">content://settings/system/notification_sound</string>
    <string name="cons_notification_group_fav_vibrate_state">OFF</string>
    <string name="cons_notification_group_other_incoming_alert">false</string>
    <string name="cons_notification_group_other_led">#FF00FF00</string>
    <string name="cons_notification_group_other_outgoing_alert">true</string>
    <string name="cons_notification_group_other_popup">true</string>
    <string name="cons_notification_group_other_ringtone">content://settings/system/notification_sound</string>
    <string name="cons_notification_group_other_vibrate_state">OFF</string>
    <string name="cons_sync_events">false</string>
    <string name="contacts">Contacts</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_all_chats">Delete all chats</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="delete_my_account_summary">Your account and all your saved data will be permanently deleted.</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="enter_is_send">Tap enter to send.</string>
    <string name="forward">Forward</string>
    <string name="groups">Groups</string>
    <string name="hide_all_from">Hide All from</string>
    <string name="incoming_notification">Incoming notification</string>
    <string name="last_seen">Last Seen</string>
    <string name="last_seen_summary">If you don\'t share your last seen status, you won\'t be able to see other people\'s last seen statuses.</string>
    <string name="light">Light</string>
    <string name="manage_storage">Manage Storage</string>
    <string name="mobile_number">Phone Number</string>
    <string name="nearby_app_invitation">Nearby app invitation</string>
    <string name="nearby_app_invitation_business">Business</string>
    <string name="nearby_app_invitation_enabled">Enabled</string>
    <string name="nearby_app_invitation_individual">Individuals</string>
    <string name="nearby_group_invitation">Nearby Group invitation</string>
    <string name="nearby_group_invitation_business">Business</string>
    <string name="nearby_group_invitation_enabled">Enabled</string>
    <string name="nearby_group_invitation_individual">Individuals</string>
    <string name="outgoing_alert">Outgoing alert</string>
    <string name="popup_notification">Popup Notification</string>
    <string name="post_to_the_channel">Post to the channel</string>
    <string name="priority_contacts">Priority Contacts</string>
    <string name="priority_groups">Priority groups</string>
    <string name="privacy">Privacy</string>
    <string name="read_receipts">Read Receipts</string>
    <string name="read_receipts_summary">If you turn off read receipts, you won\'t be able to see read receipts from other people.</string>
    <string name="remove_member">Remove member</string>
    <string name="reply">Reply</string>
    <string name="report_abuse">Report abuse</string>
    <string name="ringtone">Ringtone</string>
    <string name="save_to_downloads">Save to downloads</string>
    <string name="save_to_gallery">Save to gallery</string>
    <string name="save_to_music">Save to music</string>
    <string name="settings_account">Account</string>
    <string name="settings_help">Help</string>
    <string name="settings_media_auto_download">Media auto download</string>
    <string name="settings_notifications">Notifications</string>
    <string name="share">Share</string>
    <string name="sync_events">Synchronize events</string>
    <string name="sync_events_summary">Synchronize events with system calendar</string>
    <string name="theme">Theme</string>
    <string name="unban_from_group">Unban member</string>
    <string name="vibrate_state">Vibration</string>
</resources>