<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:key="pref_screen_notifications_posts_and_feeds">
    <CheckBoxPreference
        android:title="@string/incoming_notification"
        android:key="notification_posts_and_feeds_incoming_alert"
        android:defaultValue="@string/cons_notification_channel_fav_incoming_alert"
        app:iconSpaceReserved="false"/>
    <CheckBoxPreference
        android:title="@string/outgoing_alert"
        android:key="notification_posts_and_feeds_outgoing_alert"
        android:defaultValue="@string/cons_notification_channel_fav_outgoing_alert"
        app:iconSpaceReserved="false"/>
    <ListPreference
        android:entries="@array/entries_settings_notification_vibrate"
        android:title="@string/vibrate_state"
        android:key="notification_posts_and_feeds_vibrate_state"
        android:defaultValue="@string/cons_notification_channel_fav_vibrate_state"
        android:entryValues="@array/entryvalues_settings_notification_vibrate"
        app:iconSpaceReserved="false"/>
    <ListPreference
        android:entries="@array/entries_settings_notification_led"
        android:title="@string/light"
        android:key="notification_posts_and_feeds_led"
        android:defaultValue="@string/cons_notification_channel_fav_led"
        android:entryValues="@array/entryvalues_settings_notification_led"
        app:iconSpaceReserved="false"/>
    <CheckBoxPreference
        android:title="@string/popup_notification"
        android:key="notification_posts_and_feeds_popup"
        android:defaultValue="@string/cons_notification_channel_fav_popup"
        app:iconSpaceReserved="false"/>
    <Preference
        android:title="@string/ringtone"
        android:key="notification_posts_and_feeds_ringtone"
        android:defaultValue="@string/cons_notification_channel_fav_ringtone"
        android:ringtoneType="notification"
        android:showDefault="true"
        android:showSilent="true"
        app:iconSpaceReserved="false"/>
</PreferenceScreen>
