<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_remove_from_group"
        android:title="@string/remove_member"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item_ban_from_group"
        android:title="@string/ban_from_group"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item_unban_from_group"
        android:title="@string/unban_from_group"
        app:showAsAction="never"/>
    <item
        android:icon="@drawable/ic_baseline_reply_colortoolbarprimarytext_24dp"
        android:id="@+id/menu_item_reply"
        android:title="@string/reply"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_copy_24dp"
        android:id="@+id/menu_item_copy"
        android:title="@string/copy"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_baseline_forward_colortoolbarprimarytext_24dp"
        android:id="@+id/menu_item_forward"
        android:title="@string/forward"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_baseline_delete_colortoolbarprimarytext_24dp"
        android:id="@+id/menu_item_delete"
        android:title="@string/delete"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_baseline_edit_colortoolbarprimarytext_24dp"
        android:id="@+id/menu_item_edit"
        android:title="@string/edit"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_baseline_share_colortoolbarprimarytext_24dp"
        android:id="@+id/menu_item_share"
        android:title="@string/share"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_item_repost_to_group"
        android:visible="false"
        android:orderInCategory="9"
        android:title="@string/post_to_the_channel"
        app:showAsAction="never"/>
    <item
        android:id="@+id/save_to_gallery"
        android:visible="false"
        android:orderInCategory="10"
        android:title="@string/save_to_gallery"
        app:showAsAction="never"/>
    <item
        android:id="@+id/save_to_music"
        android:visible="false"
        android:orderInCategory="11"
        android:title="@string/save_to_music"
        app:showAsAction="never"/>
    <item
        android:id="@+id/save_to_downloads"
        android:visible="false"
        android:orderInCategory="12"
        android:title="@string/save_to_downloads"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_message_report_abuse"
        android:visible="false"
        android:orderInCategory="15"
        android:title="@string/report_abuse"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_message_hide_from_timeline"
        android:visible="false"
        android:orderInCategory="16"
        android:title="@string/hide_all_from"
        app:showAsAction="never"/>
</menu>
